--- a/git-learning-2/index.html
+++ b/git-learning-2/index.html
@@ -4,68 +4,71 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git Learning</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <h1>Bohemian Rhapsody</h1>
-    <h3><em>by Oueen</em></h3>
-    <p>
-        Is this the real life?
-        Is this just fantasy?
-        Caught in a landslide
-        No escape from reality
-        Open your eyes
-        Look up to the skies and see
-        I'm just a poor boy, I need no sympathy
-        Because I'm easy come, easy go
-        A little high, little low
-        Anyway the wind blows, doesn't really matter to me, to me
-        Mama, just killed a man
-        Put a gun against his head
-        Pulled my trigger, now he's dead
-        Mama, life had just begun
-        But now I've gone and thrown it all away
-        Mama, ooo
-        Didn't mean to make you cry
-        If I'm not back again this time tomorrow
-        Carry on, carry on, as if nothing really matters
-        Too late, my time has come
-        Sends shivers down my spine
-        Body's aching all the time
-        Goodbye everybody - I've got to go
-        Gotta leave you all behind and face the truth
-        Mama, ooo - (anyway the wind blows)
-        I don't want to die
-        I sometimes wish I'd never been born at all
-        I see a little silhouetto of a man
-        Scaramouch, scaramouch will you do the fandango
-        Thunderbolt and lightning - very very frightening me
-        Gallileo, Gallileo,
-        Gallileo, Gallileo,
-        Gallileo Figaro - magnifico
-        But I'm just a poor boy and nobody loves me
-        He's just a poor boy from a poor family
-        Spare him his life from this monstrosity
-        Easy come easy go - will you let me go
-        Bismillah! No - we will not let you go - let him go
-        Bismillah! We will not let you go - let him go
-        Bismillah! We will not let you go - let me go
-        Will not let you go - let me go (never)
-        Never let you go - let me go
-        Never let me go - ooo
-        No, no, no, no, no, no, no -
-        Oh mama mia, mama mia, mama mia let me go
-        Beelzebub has a devil put aside for me
-        For me
-        For me
-        So you think you can stone me and spit in my eye
-        So you think you can love me and leave me to die
-        Oh baby - can't do this to me baby
-        Just gotta get out - just gotta get right outta here
-        Ooh yeah, ooh yeah
-        Nothing really matters
-        Anyone can see
-        Nothing really matters - nothing really matters to me
-        Anyway the wind blows...
-    </p>
+    <div class="container">
+        <h1>Bohemian Rhapsody</h1>
+        <h3><em>by Oueen</em></h3>
+        <p>
+            Is this the real life?<br>
+            Is this just fantasy?<br>
+            Caught in a landslide<br>
+            No escape from reality<br>
+            Open your eyes<br>
+            Look up to the skies and see<br>
+            I'm just a poor boy, I need no sympathy<br>
+            Because I'm easy come, easy go<br>
+            A little high, little low<br>
+            Anyway the wind blows, doesn't really matter to me, to me<br>
+            Mama, just killed a man<br>
+            Put a gun against his head<br>
+            Pulled my trigger, now he's dead<br>
+            Mama, life had just begun<br>
+            But now I've gone and thrown it all away<br>
+            Mama, ooo<br>
+            Didn't mean to make you cry<br>
+            If I'm not back again this time tomorrow<br>
+            Carry on, carry on, as if nothing really matters<br>
+            Too late, my time has come<br>
+            Sends shivers down my spine<br>
+            Body's aching all the time<br>
+            Goodbye everybody - I've got to go<br>
+            Gotta leave you all behind and face the truth<br>
+            Mama, ooo - (anyway the wind blows)<br>
+            I don't want to die<br>
+            I sometimes wish I'd never been born at all<br>
+            I see a little silhouetto of a man<br>
+            Scaramouch, scaramouch will you do the fandango<br>
+            Thunderbolt and lightning - very very frightening me<br>
+            Gallileo, Gallileo,<br>
+            Gallileo, Gallileo,<br>
+            Gallileo Figaro - magnifico<br>
+            But I'm just a poor boy and nobody loves me<br>
+            He's just a poor boy from a poor family<br>
+            Spare him his life from this monstrosity<br>
+            Easy come easy go - will you let me go<br>
+            Bismillah! No - we will not let you go - let him go<br>
+            Bismillah! We will not let you go - let him go<br>
+            Bismillah! We will not let you go - let me go<br>
+            Will not let you go - let me go (never)<br>
+            Never let you go - let me go<br>
+            Never let me go - ooo<br>
+            No, no, no, no, no, no, no -<br>
+            Oh mama mia, mama mia, mama mia let me go<br>
+            Beelzebub has a devil put aside for me<br>
+            For me<br>
+            For me<br>
+            So you think you can stone me and spit in my eye<br>
+            So you think you can love me and leave me to die<br>
+            Oh baby - can't do this to me baby<br>
+            Just gotta get out - just gotta get right outta here<br>
+            Ooh yeah, ooh yeah<br>
+            Nothing really matters<br>
+            Anyone can see<br>
+            Nothing really matters - nothing really matters to me<br>
+            Anyway the wind blows...<br>
+        </p>
+    </div>
 </body>
 </html>
