Add browser-sync, autoprefixer, html-validate

--- a/git-learning-2/index.html
+++ b/git-learning-2/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Bohemian Rhapsody</h1>
-        <h3><em>by Oueen</em></h3>
+        <h1>Bohemian Rhapsody
+        <h3><em>by Queen</em></h3>
         <p>
             Is this the real life?<br>
             Is this just fantasy?<br>
